--- a/src/main/resources/templates/admin/fragments/aside.html
+++ b/src/main/resources/templates/admin/fragments/aside.html
@@ -30,9 +30,9 @@
             <!--						<i class="bi bi-yelp"></i> <span>Thương hiệu</span>-->
             <!--				</a></li>-->
 
-            <!--				<li class="nav-item"><a class="nav-link collapsed" th:href="@{/admin/home}">-->
-            <!--						<i class="bi bi-box"></i> <span>Sản phẩm</span>-->
-            <!--				</a></li>-->
+            				<li class="nav-item"><a class="nav-link collapsed" th:href="@{/admin/cars}">
+            						<i class="bi bi-car-front"></i> <span>Xe </span>
+            				</a></li>
 
             <!--				<li class="nav-item"><a class="nav-link collapsed" th:href="@{/admin/home}">-->
             <!--						<i class="bi bi-paypal"></i> <span>Hoá đơn</span>-->
