--- a/src/main/resources/templates/admin/products/product-form.html
+++ b/src/main/resources/templates/admin/products/product-form.html
@@ -4,7 +4,7 @@
 	layout:decorate="~{admin/layout.html}">
 
 <head>
-<title>Sản phẩm</title>
+<title>Xe</title>
 </head>
 
 <body>
@@ -13,9 +13,8 @@
 			<h1>Sản phẩm</h1>
 			<nav>
 				<ol class="breadcrumb">
-					<li class="breadcrumb-item"><a th:href="@{/products}">Danh
-							sách</a></li>
-					<li class="breadcrumb-item active">Nhập sản phẩm</li>
+					<li class="breadcrumb-item"><a th:href="@{/products}">Xe</a></li>
+<!--					<li class="breadcrumb-item active">Nhập sản phẩm</li>-->
 				</ol>
 			</nav>
 		</div>
