--- a/src/main/resources/templates/admin/products/product-list.html
+++ b/src/main/resources/templates/admin/products/product-list.html
@@ -65,16 +65,16 @@
 									<tr>
 										<th scope="col">#</th>
 										<th scope="col"><a
-											th:href="@{/products(field=name, size=${size}, keywords=${keywords})}">Tên
+											th:href="@{/admin/car(field=name, size=${size}, keywords=${keywords})}">Tên
 												sản phẩm</a></th>
 										<th scope="col"><a
-											th:href="@{/products(field=quantity, size=${size}, keywords=${keywords})}">Số
+											th:href="@{/admin/car(field=quantity, size=${size}, keywords=${keywords})}">Số
 												lượng</a></th>
 										<th scope="col">Màu sắc</th>
 										<th scope="col"><a
-											th:href="@{/products(field=price, size=${size}, keywords=${keywords})}">Giá</a></th>
+											th:href="@{/admin/car(field=price, size=${size}, keywords=${keywords})}">Giá</a></th>
 										<th scope="col"><a
-											th:href="@{/products(field=discount, size=${size}, keywords=${keywords})}">Giảm
+											th:href="@{/admin/car(field=discount, size=${size}, keywords=${keywords})}">Giảm
 												giá</a></th>
 										<th scope="col">Hạn giảm giá</th>
 										<th scope="col"><a
