--- a/src/main/resources/templates/admin/fragments/header.html
+++ b/src/main/resources/templates/admin/fragments/header.html
@@ -12,7 +12,7 @@
         <div class="d-flex align-items-center justify-content-between">
             <a th:href="@{/admin/home}" class="logo d-flex align-items-center"> <img
                     th:src="@{/admin/assets/img/logo.png}" alt=""> <span
-                    class="d-none d-lg-block">Molla Admin</span>
+                    class="d-none d-lg-block">Rental Car Admin</span>
             </a> <i class="bi bi-list toggle-sidebar-btn"></i>
         </div>
         <!-- End Logo -->
