--- a/src/main/resources/templates/admin/users/user-list.html
+++ b/src/main/resources/templates/admin/users/user-list.html
@@ -84,7 +84,7 @@
                                         th:href="@{/admin/users(field=nationalId, size=${size}, keywords=${keywords})}">Bằng
                                     lái</a></th>
                                 <th scope="col"><a
-                                        th:href="@{/admin/users(field=nationalId, size=${size}, keywords=${keywords})}">Địa
+                                        th:href="@{/admin/users(field=drivingLicense, size=${size}, keywords=${keywords})}">Địa
                                     chỉ</a></th>
 
                                 <th scope="col"><a
