"fix: update car(image)"

--- a/src/main/resources/templates/client/carOwner/mycar.html
+++ b/src/main/resources/templates/client/carOwner/mycar.html
@@ -71,15 +71,15 @@
     <nav aria-label="Page navigation">
         <ul class="pagination justify-content-center">
             <li class="page-item" th:classappend="${currentPage == 1} ? 'disabled'">
-                <a class="page-link" th:href="@{/car-owner/my-car(page=${currentPage - 1}, size=${totalPages})}" aria-label="Previous">
+                <a class="page-link" th:href="@{/car-owner/my-car(page=${currentPage - 1}, size=${size})}" aria-label="Previous">
                     <span aria-hidden="true">&laquo;</span>
                 </a>
             </li>
             <li class="page-item" th:each="i : ${#numbers.sequence(1, totalPages)}" th:classappend="${i == currentPage} ? 'active'">
-                <a class="page-link" th:href="@{/car-owner/my-car(page=${i}, size=${totalPages})}" th:text="${i}">1</a>
+                <a class="page-link" th:href="@{/car-owner/my-car(page=${i}, size=${size})}" th:text="${i}">1</a>
             </li>
             <li class="page-item" th:classappend="${currentPage == totalPages} ? 'disabled'">
-                <a class="page-link" th:href="@{/car-owner/my-car(page=${currentPage + 1}, size=${totalPages})}" aria-label="Next">
+                <a class="page-link" th:href="@{/car-owner/my-car(page=${currentPage + 1}, size=${size})}" aria-label="Next">
                     <span aria-hidden="true">&raquo;</span>
                 </a>
             </li>
