--- a/src/main/resources/templates/client/carOwner/details.html
+++ b/src/main/resources/templates/client/carOwner/details.html
@@ -275,7 +275,7 @@
                         </div>
                         <div class="form-group">
                             <label>Term of Use:</label>
-                            <span th:text="${carDto.termOfUse}" th:id="terms" class="hidden opacity-0"></span>
+                            <span th:text="${carDto.termOfUse}" th:id="terms" style="display: none"></span>
                             <div class="form-check">
                                 <input class="form-check-input" type="checkbox" value="No Smoking"
                                        th:field="*{termOfUse}">
@@ -291,14 +291,6 @@
                                        th:field="*{termOfUse}">
                                 <label class="form-check-label" >No Food in Car</label>
                             </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="Other"
-                                       th:field="*{termOfUse}">
-                                <label class="form-check-label" >Other</label>
-                            </div>
-                            <input type="text" class="form-control mt-2"
-                                   th:field="*{termOfUse}" placeholder="Specify other terms">
-
                         <button type="submit" class="btn btn-primary mt-3">Save</button>
                     </div>
                 </div>
