--- a/src/main/resources/templates/admin/users/user-list.html
+++ b/src/main/resources/templates/admin/users/user-list.html
@@ -65,30 +65,30 @@
                             <tr>
                                 <th scope="col">#</th>
                                 <th scope="col"><a
-                                        th:href="@{/admin-page/users(field=email, size=${size}, keywords=${keywords})}">Tên
+                                        th:href="@{/admin/users(field=email, size=${size}, keywords=${keywords})}">Tên
                                     đăng nhập</a></th>
                                 <th scope="col"><a
-                                        th:href="@{/admin-page/users(field=phoneNumber, size=${size}, keywords=${keywords})}">Số
+                                        th:href="@{/admin/users(field=phoneNumber, size=${size}, keywords=${keywords})}">Số
                                     điện thoại</a></th>
                                 <th scope="col"><a
-                                        th:href="@{/admin-page/users(field=name, size=${size}, keywords=${keywords})}">Họ
+                                        th:href="@{/admin/users(field=name, size=${size}, keywords=${keywords})}">Họ
                                     và tên</a></th>
                                 <th scope="col"><a
-                                        th:href="@{/admin-page/users(field=dateOfBirth, size=${size}, keywords=${keywords})}">Ngày
+                                        th:href="@{/admin/users(field=dateOfBirth, size=${size}, keywords=${keywords})}">Ngày
                                     sinh</a></th>
                                 <th scope="col"><a
-                                        th:href="@{/admin-page/users(field=nationalId, size=${size}, keywords=${keywords})}">Quốc
+                                        th:href="@{/admin/users(field=nationalId, size=${size}, keywords=${keywords})}">Quốc
                                     gia</a></th>
 
                                 <th scope="col"><a
-                                        th:href="@{/admin-page/users(field=nationalId, size=${size}, keywords=${keywords})}">Bằng
+                                        th:href="@{/admin/users(field=nationalId, size=${size}, keywords=${keywords})}">Bằng
                                     lái</a></th>
                                 <th scope="col"><a
-                                        th:href="@{/admin-page/users(field=nationalId, size=${size}, keywords=${keywords})}">Địa
+                                        th:href="@{/admin/users(field=drivingLicense, size=${size}, keywords=${keywords})}">Địa
                                     chỉ</a></th>
 
                                 <th scope="col"><a
-                                        th:href="@{/admin-page/users(field=role, size=${size}, keywords=${keywords})}">Chức
+                                        th:href="@{/admin/users(field=role, size=${size}, keywords=${keywords})}">Chức
                                     vụ</a></th>
                                 <th></th>
                             </tr>
