--- a/src/main/resources/templates/client/fragments/quick-view.html
+++ b/src/main/resources/templates/client/fragments/quick-view.html
@@ -36,21 +36,21 @@
 										<div id="bodyQuickView"></div>
 
 										<div class="details-filter-row details-row-size">
-											<label for="cart_size">Kích thước:</label>
+											<label for="cart_size">Màu sắc:</label>
 											<div class="select-custom">
 												<select name="cart_size" id="cart_size"
 													class="form-control">
-													<option value="s">Small</option>
-													<option value="m">Medium</option>
-													<option value="l">Large</option>
-													<option value="xl">Extra Large</option>
+													<option value="s">Trắng</option>
+													<option value="m">Đỏ</option>
+													<option value="l">Đen</option>
+													<option value="xl">Ghi</option>
 												</select>
 											</div>
 											<!-- End .select-custom -->
 										</div>
 
 										<div class="details-filter-row details-row-size">
-											<label for="cart_qty">Qty:</label>
+											<label for="cart_qty">Số lượng:</label>
 											<div class="product-details-quantity">
 												<input type="number" id="cart_qty" name="cart_qty" class="form-control" value="1"
 													min="1" max="10" step="1" data-decimals="0" required>
