--- a/src/main/resources/templates/admin/products/product-list.html
+++ b/src/main/resources/templates/admin/products/product-list.html
@@ -1,214 +1,188 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
-	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-	layout:decorate="~{admin/layout.html}">
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{admin/layout.html}">
 
 <head>
-<title>Sản phẩm</title>
+    <title>Sản phẩm</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4/dist/fancybox.css"/>
+    <style>
+        .fancybox-button--zoom,
+        .fancybox-button--fullscreen,
+        .fancybox-button--download,
+        .fancybox-button--thumbs {
+            display: none !important;
+        }
+
+        .gallery-image {
+            cursor: pointer;
+            width: 100px;
+        }
+
+        .hidden {
+            display: none;
+        }
+    </style>
+    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4/dist/fancybox.umd.js"></script>
 </head>
 
 <body>
-	<div layout:fragment="content">
-		<div class="pagetitle">
-			<h1>Sản phẩm</h1>
-			<nav>
-				<ol class="breadcrumb">
-					<li class="breadcrumb-item"><a th:href="@{/products}">Danh
-							sách</a></li>
-					<li class="breadcrumb-item"><a
-						th:href="@{/products/saveOrUpdate}">Thêm mới</a></li>
-				</ol>
-			</nav>
-		</div>
-		<!-- End Page Title -->
+<div layout:fragment="content">
+    <div class="pagetitle">
+        <h1>Sản phẩm</h1>
+        <nav>
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a th:href="@{/products}">Danh
+                    sách</a></li>
+                <li class="breadcrumb-item"><a
+                        th:href="@{/products/saveOrUpdate}">Thêm mới</a></li>
+            </ol>
+        </nav>
+    </div>
+    <!-- End Page Title -->
 
-		<section class="section dashboard">
-			<div class="row">
+    <section class="section dashboard">
+        <div class="row">
 
-				<div class="col-lg-12">
+            <div class="col-lg-12">
 
-					<div class="card">
-						<div class="card-body">
-							<div class="row mt-2">
-								<div class="col-sm-2 col-lg-2">
-									<form
-										th:action="@{/products(field=${field}, keywords=${keywords})}">
-										<label for=""> <select class="form-select" name="size"
-											id="size" onchange="this.form.submit()">
-												<option value="5" th:selected="${resultPage.size == 5}">5</option>
-												<option value="10" th:selected="${resultPage.size == 10}">10</option>
-												<option value="15" th:selected="${resultPage.size == 15}">15</option>
-												<option value="20" th:selected="${resultPage.size == 20}">20</option>
-												<option value="25" th:selected="${resultPage.size == 25}">25</option>
-										</select>
-										</label>
-									</form>
-								</div>
-								<div class="col-sm8 col-lg-8"></div>
-								<div class="col-sm-2 col-lg-2 justify-content-end">
-									<form th:action="@{/products(field=${field}, size=${size})}">
-										<div class="input-group mb-3">
-											<input type="text" class="form-control" name="keywords"
-												id="keywords" placeholder="Tìm kiếm theo tên sản phẩm"
-												th:value="${keywords}">
-											<button class="btn btn-outline-secondary" type="submit">
-												<i class="bi bi-search"></i>
-											</button>
-										</div>
-									</form>
-								</div>
-							</div>
+                <div class="card">
+                    <div class="card-body">
+                        <div class="row mt-2">
+                            <div class="col-sm-2 col-lg-2">
+                                <form
+                                        th:action="@{/admin/cars(field=${field}, keywords=${keywords})}">
+                                    <label> <select class="form-select" name="size"
+                                                    id="size" onchange="this.form.submit()">
+                                        <option value="5" th:selected="${resultPage.size == 5}">5</option>
+                                        <option value="10" th:selected="${resultPage.size == 10}">10</option>
+                                        <option value="15" th:selected="${resultPage.size == 15}">15</option>
+                                        <option value="20" th:selected="${resultPage.size == 20}">20</option>
+                                        <option value="25" th:selected="${resultPage.size == 25}">25</option>
+                                    </select>
+                                    </label>
+                                </form>
+                            </div>
+                            <div class="col-sm8 col-lg-8"></div>
+                            <div class="col-sm-2 col-lg-2 justify-content-end">
+                                <form th:action="@{/admin/cars(field=${field}, size=${size})}">
+                                    <div class="input-group mb-3">
+                                        <input type="text" class="form-control" name="keywords"
+                                               id="keywords" placeholder="Tìm kiếm theo tên xe"
+                                               th:value="${keywords}">
+                                        <button class="btn btn-outline-secondary" type="submit">
+                                            <i class="bi bi-search"></i>
+                                        </button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
 
-							<!-- Default Table -->
-							<table class="table">
-								<thead>
-									<tr>
-										<th scope="col">#</th>
-										<th scope="col"><a
-											th:href="@{/admin/car(field=name, size=${size}, keywords=${keywords})}">Tên
-												sản phẩm</a></th>
-										<th scope="col"><a
-											th:href="@{/admin/car(field=quantity, size=${size}, keywords=${keywords})}">Số
-												lượng</a></th>
-										<th scope="col">Màu sắc</th>
-										<th scope="col"><a
-											th:href="@{/admin/car(field=price, size=${size}, keywords=${keywords})}">Giá</a></th>
-										<th scope="col"><a
-											th:href="@{/admin/car(field=discount, size=${size}, keywords=${keywords})}">Giảm
-												giá</a></th>
-										<th scope="col">Hạn giảm giá</th>
-										<th scope="col"><a
-											th:href="@{/products(field=views, size=${size}, keywords=${keywords})}">Lượt
-												xem</a></th>
-										<th scope="col">Banner</th>
-										<th scope="col"><a
-											th:href="@{/products(field=category.name, size=${size}, keywords=${keywords})}">Danh
-												mục</a></th>
-										<th scope="col"><a
-											th:href="@{/products(field=brand, size=${size}, keywords=${keywords})}">Thương
-												hiệu</a></th>
-										<th></th>
-									</tr>
-								</thead>
-								<tbody>
-									<tr th:each="item, i : ${resultPage.content}">
-										<th scope="row" th:text="${i.count}"></th>
-										<td th:text="${item.name}"></td>
-										<td th:text="${item.quantity}"></td>
-										<td>
-											<button type="button"
-												th:style="'background-color:' + ${item.color} + '; border-radius: 100%; height: 25px; width: 25px;'"></button>
-										</td>
-										<td
-											th:text="${#numbers.formatDecimal(item.price, 0, 'COMMA', 0, 'POINT')} + ' VND'"></td>
-										<td th:text="${item.discount + ' %'}"></td>
-										<td><span class="badge bg-info text-dark"
-											th:if="${item.startDayDiscount == null || item.endDayDiscount == null}">Chưa
-												cập nhật...</span>
-											<div
-												th:if="${item.startDayDiscount != null || item.endDayDiscount != null}">
-												<span class="badge bg-success"
-													th:if="${item.startDayDiscount.before(#dates.createNow()) and item.endDayDiscount.after(#dates.createNow())}">Đang
-													giảm giá</span> <span class="badge bg-warning text-dark"
-													th:if="${item.startDayDiscount.after(#dates.createNow())}">Chưa
-													bắt đầu</span> <span class="badge bg-danger"
-													th:if="${item.endDayDiscount.before(#dates.createNow())}">Đã
-													kết thúc</span>
-											</div></td>
+                        <!-- Default Table -->
+                        <table class="table">
+                            <thead>
+                            <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">Hình ảnh</th>
+                                <th scope="col"><a
+                                        th:href="@{/admin/car(field=name, size=${size}, keywords=${keywords})}">Tên
+                                    xe</a></th>
+                                <th scope="col"><a
+                                        th:href="@{/admin/car(field=brand, size=${size}, keywords=${keywords})}">Hãng
+                                    xe</a></th>
+                                <th scope="col"><a
+                                        th:href="@{/admin/car(field=numberOfSeats, size=${size}, keywords=${keywords})}">Số
+                                    ghế</a></th>
+                                <th scope="col"><a
+                                        th:href="@{/admin/car(field=color, size=${size}, keywords=${keywords})}">Màu
+                                    sắc</a></th>
+                                <th scope="col"><a
+                                        th:href="@{/products(field=category.name, size=${size}, keywords=${keywords})}">Chủ
+                                    xe</a></th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr th:each="item, i : ${resultPage.content}">
+                                <td th:text="${i.count}"></td>
+                                <td>
+                                    <!-- Hiển thị ảnh đầu tiên và mở slideshow khi nhấp -->
+                                    <div class="gallery-container">
+                                        <div data-fancybox="gallery-${i.index}" th:data-src="@{${item.images[0].url}}"
+                                             data-caption="Image 1" class="gallery-image">
+                                            <img th:src="@{${item.images[0].url}}" alt="Image 1" style="width: 100px;" />
+                                        </div>
 
-										<td th:text="${item.views}"></td>
-										<td>
-											<div class="card" style="max-width: 150px;">
-												<img
-													th:src="${item.banner} == null ? '/admin/assets/img/no-image.jpg' : '/uploads/' + ${item.banner}"
-													class="card-img-top" style="max-width: 150px;" alt="...">
-											</div>
-										</td>
-										<td th:text="${item.category.name}"></td>
-										<td th:text="${item.brand.name}"></td>
-										<td>
-											<div class="btn-group" role="group">
-												<button type="button" class="btn btn-info"
-													data-bs-toggle="modal" data-bs-target="#viewProduct"
-													th:data-id="${item.id}"
-													th:onclick="viewProduct(this.getAttribute('data-id'))">
-													<i class="bi bi-eye"></i>
-												</button>
-												<a type="button" class="btn btn-warning"
-													th:href="@{/products/edit(id=${item.id})}"> <i
-													class="bi bi-pen"></i>
-												</a>
-												<button type="button" class="btn btn-danger"
-													th:data-id="${item.id}" th:data-name="${item.name}"
-													th:onclick="deleteProduct(this.getAttribute('data-id'),this.getAttribute('data-name'))">
-													<i class="bi bi-trash"></i>
-												</button>
-											</div>
-										</td>
-									</tr>
-								</tbody>
-							</table>
-							<!-- End Default Table Example -->
+                                        <!-- Các ảnh còn lại được ẩn nhưng sẽ hiển thị trong Fancybox khi slideshow bắt đầu -->
+                                        <div th:each="image, iterStat : ${item.images}" th:if="${iterStat.index > 0}" class="hidden">
+                                            <div data-fancybox="gallery-${i.index}" th:data-src="@{${image.url}}"
+                                                 data-caption="Image from gallery ${i.index}" class="gallery-image">
+                                                <img th:src="@{${image.url}}" alt="Image ${iterStat.index}" style="width: 100px;" />
+                                            </div>
+                                        </div>
+                                    </div>
+                                </td>
 
-							<nav aria-label="Page navigation example"
-								th:if="${resultPage.totalPages > 0}">
-								<ul class="pagination justify-content-center">
-									<li
-										th:class="${resultPage.number + 1 == 1} ? 'page-item active' : 'page-item'">
-										<a class="page-link"
-										th:href="@{/products(field=${field}, page=${1}, size=${resultPage.size}, keywords=${keywords})}"
-										tabindex="-1" aria-disabled="true">Previous</a>
-									</li>
+                                <td th:text="${item.name}"></td>
+                                <td th:text="${item.brand}"></td>
+                                <td th:text="${item.numberOfSeats}"></td>
+                                <td th:text="${item.color}"></td>
+                                <td th:text="${item.owner}"></td>
+                            </tr>
+                            </tbody>
+                        </table>
+                        <!-- End Default Table Example -->
+                        <nav aria-label="Page navigation example"
+                             th:if="${resultPage.totalPages > 0}">
 
-									<li th:each=" pageNumber : ${pageNumbers}"
-										th:if="${resultPage.totalPages > 1}"
-										th:class="${pageNumber == resultPage.number + 1} ? 'page-item active' : 'page-item'">
-										<a class="page-link"
-										th:href="@{/products(field=${field}, page=${pageNumber}, size=${resultPage.size}, keywords=${keywords})}"
-										th:text="${pageNumber}">1</a>
-									</li>
+                            <ul class="pagination justify-content-center">
+                                <li
+                                        th:class="${resultPage.number + 1 == 1} ? 'page-item active' : 'page-item'">
+                                    <a class="page-link"
+                                       th:href="@{/admin/cars(field=${field}, page=${1}, size=${resultPage.size}, keywords=${keywords})}"
+                                       tabindex="-1" aria-disabled="true">Previous</a>
+                                </li>
 
-									<li
-										th:class="${resultPage.number + 1 == resultPage.totalPages} ? 'page-item active' : 'page-item'">
-										<a class="page-link"
-										th:href="@{/products(field=${field}, page=${resultPage.totalPages}, size=${resultPage.size}, keywords=${keywords})}">Next</a>
-									</li>
-								</ul>
-							</nav>
+                                <li th:each=" pageNumber : ${pageNumbers}"
+                                    th:if="${resultPage.totalPages > 1}"
+                                    th:class="${pageNumber == resultPage.number + 1} ? 'page-item active' : 'page-item'">
+                                    <a class="page-link"
+                                       th:href="@{/admin/cars(field=${field}, page=${pageNumber}, size=${resultPage.size}, keywords=${keywords})}"
+                                       th:text="${pageNumber}">1</a>
+                                </li>
 
-						</div>
-					</div>
+                                <li
+                                        th:class="${resultPage.number + 1 == resultPage.totalPages} ? 'page-item active' : 'page-item'">
+                                    <a class="page-link"
+                                       th:href="@{/admin/cars(field=${field}, page=${resultPage.totalPages}, size=${resultPage.size}, keywords=${keywords})}">Next</a>
+                                </li>
+                            </ul>
+                        </nav>
 
-				</div>
+                    </div>
+                </div>
 
-			</div>
-		</section>
+            </div>
 
-		<div class="modal fade" id="viewProduct" tabindex="-1">
-			<div class="modal-dialog modal-dialog-centered modal-fullscreen">
-				<div class="modal-content">
-					<div class="modal-header">
-						<h5 class="modal-title">Thông tin Sản phẩm</h5>
-						<button type="button" class="btn-close" data-bs-dismiss="modal"
-							aria-label="Close"></button>
-					</div>
-					<div class="modal-body">
-						<div class="row">
-							<div class="col-sm-12 col-lg-4">
-								<div class="row" id="bodyViewProductImages"></div>
-							</div>
-							<div class="col-sm-12 col-lg-8" id="bodyViewProduct"></div>
-						</div>
-					</div>
-					<div class="modal-footer">
-						<button type="button" class="btn btn-secondary"
-							data-bs-dismiss="modal">Đóng</button>
-					</div>
-				</div>
-			</div>
-		</div>
+        </div>
+    </section>
+</div>
 
-	</div>
+<script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4/dist/fancybox.umd.js"></script>
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        // Khởi tạo Fancybox cho tất cả các nhóm
+        Fancybox.bind('[data-fancybox]', {
+            // Cấu hình Fancybox
+            loop: true,
+            buttons: ["close"],
+            touch: false,
+            drag: true,
+            toolbar: false,
+            arrows: false
+        });
+    });
+</script>
 </body>
 
+</script>
 </html>
