--- a/src/main/resources/templates/client/fragments/quick-view.html
+++ b/src/main/resources/templates/client/fragments/quick-view.html
@@ -65,9 +65,8 @@
 													title="Yêu thích"><span>Yêu thích</span></a>
 											</div>
 											<!-- End .details-action-wrapper -->
-											<a th:onclick="addCart()"
-												class="btn-product btn-cart"><span>Thêm vào giỏ
-													hàng</span></a>
+											<a th:href="@{car/check-out}"
+												class="btn-product btn-cart"><span>Rent Car Now</span></a>
 										</div>
 
 										<div class="product-details-footer">
