statistical users,bookings

--- a/src/main/resources/templates/admin/fragments/aside.html
+++ b/src/main/resources/templates/admin/fragments/aside.html
@@ -11,13 +11,13 @@
 
         <ul class="sidebar-nav" id="sidebar-nav">
 
-            <li class="nav-item"><a class="nav-link" th:href="@{/admin-page/home}"> <i
+            <li class="nav-item"><a class="nav-link" th:href="@{/admin/home}"> <i
                     class="bi bi-grid"></i> <span>Trang chủ</span>
             </a>
             </li>
             <!-- End Dashboard Nav -->
 
-            <li class="nav-item"><a class="nav-link collapsed" th:href="@{/admin-page/users}">
+            <li class="nav-item"><a class="nav-link collapsed" th:href="@{/admin/users}">
                 <i class="bi bi-people-fill"></i> <span>Người dùng</span>
             </a>
             </li>
