--- a/src/main/resources/templates/admin/home/index.html
+++ b/src/main/resources/templates/admin/home/index.html
@@ -163,7 +163,7 @@
 										<th scope="col">Tên khách hàng</th>
 										<th scope="col">Email</th>
 										<th scope="col">Số điện thoại</th>
-										<th scope="col">Tổng số sản phẩm</th>
+										<th scope="col">Tổng số đơn</th>
 										<th scope="col">Tổng tiền</th>
 									</tr>
 								</thead>
@@ -201,15 +201,15 @@
 
 						<div class="card-body pb-0">
 							<h5 class="card-title">
-								Top 5 sản phẩm bán chạy nhất <span id="showFilterSaler"></span>
+								Top 5 xe được thuê nhiều nhất <span id="showFilterSaler"></span>
 							</h5>
 
 							<table class="table table-borderless">
 								<thead>
 									<tr>
 										<th scope="col"></th>
-										<th scope="col">Tên sản phẩm</th>
-										<th scope="col">Số lượng đã bán</th>
+										<th scope="col">Tên xe</th>
+										<th scope="col">Số lần được thuê</th>
 										<th scope="col">Tổng tiền</th>
 									</tr>
 								</thead>
